[tool.poetry]
name = "field-standard"
version = "0.1.0"
description = "Field standard for Bioinformatics teams within Medical Laboratories"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^9.5.17"
mkdocs-git-revision-date-localized-plugin = "^1.2.4"
mkdocs-material-extensions = "^1.3.1"
mkdocs-mermaid2-plugin = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
